--- a/templates/default/app/controllers/api/v1/api_controller.rb.tt
+++ b/templates/default/app/controllers/api/v1/api_controller.rb.tt
@@ -1,15 +1,22 @@
 class Api::V1::ApiController < ApplicationController
   # includes
   include ActsAsApi::Rendering
-
+  <% if enable_pundit? -%>
+  include Pundit
+  <% end -%>
+  
   # before_actions
+  <% if install_user? -%>
+  before_action :authenticate_request
+  <% end -%>
 
   # rescues
   rescue_from ActiveRecord::RecordNotFound, :with => :record_not_found
 
   # attrs
-
-
+  <% if install_user? -%>
+  attr_reader :current_user
+  <% end -%>
   # methods
   def render_result(json, status = :ok)
     render json: json, status: status
@@ -30,4 +37,11 @@ class Api::V1::ApiController < ApplicationController
   def render_error(err, status = :unprocessable_entity)
     render json: { status: status, error: err }, status: status
   end
+
+  <% if install_user? -%>
+  def authenticate_request
+    @current_user = User.authenticate_with_http_headers(request.headers)
+    render_not_authorized unless @current_user
+  end
+  <% end -%>
 end
