--- a/templates/users/app/models/user.rb.tt
+++ b/templates/users/app/models/user.rb.tt
@@ -11,6 +11,7 @@ class User < ActiveRecord::Base
   has_one_attached :avatar
   attr_accessor :avatar_contents
   attr_accessor :avatar_name
+  attr_accessor :remove_avatar
   before_save :clear_avatar
   after_save :parse_avatar
   #validate :avatar_validations, on: :create
