fixed some errors regarding no extra fields on user model. updated readme files and moved hoc_utils to development group in gems

--- a/templates/default/README.md.erb
+++ b/templates/default/README.md.erb
@@ -15,7 +15,7 @@ This app was created by the [hoc_api] template and is born with the following ge
   User model with authentication methods (JWT)
 * [acts_as_hoc_pushable]
   Adds devices to model and possiblity to send push messages (FCM)
-<% end -%>  
+<% end -%>
 <% if enable_user_avatar? -%>
 * [acts_as_hoc_avatarable]
   Add avatar to model with ActiveStorage.
@@ -44,6 +44,7 @@ This app was created by the [hoc_api] template and is born with the following ge
 <% end -%>
 
 ### Developement gems
+* [hoc_utils] Utilities for HoC API
 * [rspec-rails]
   rspec-rails is a testing framework for Rails 3.x, 4.x and 5.x.
 * [better_errors]
@@ -125,3 +126,4 @@ To run the application locally:
 [mini_magick]:https://github.com/minimagick/minimagick
 [aws-sdk-s3]:https://github.com/aws/aws-sdk-ruby
 [acts_as_hoc_avatarable]:https://github.com/house-of-code/acts_as_hoc_avatarable
+[hoc_utils]:https://github.com/house-of-code/hoc_utils
