updated specs, added pagination and metadata to collections, added orderable to default

--- a/templates/default/README.md.erb
+++ b/templates/default/README.md.erb
@@ -42,7 +42,9 @@ This app was created by the [hoc_api] template and is born with the following ge
 * [trestle]
   A modern, responsive admin framework for Ruby on Rails
 <% end -%>
-
+* [kaminari]
+  A Scope & Engine based, clean, powerful, customizable and sophisticated paginator for Ruby webapps
+  
 ### Developement gems
 * [hoc_utils] Utilities for HoC API
 * [rspec-rails]
@@ -127,3 +129,4 @@ To run the application locally:
 [aws-sdk-s3]:https://github.com/aws/aws-sdk-ruby
 [acts_as_hoc_avatarable]:https://github.com/house-of-code/acts_as_hoc_avatarable
 [hoc_utils]:https://github.com/house-of-code/hoc_utils
+[kaminari]:https://github.com/kaminari/kaminari
